crates/tui/tests/snapshots/snapshot_footer_tests__snapshot_footer_hints_apps_screen.snap
---
source: crates/tui/tests/snapshot_footer_tests.rs
expression: harness.render()
---
┌──────────────────────────────────────────────────────────────────────────────┐
│Splunk TUI - Apps | [?] Unknown                                               │
│ |                                                                            │
└──────────────────────────────────────────────────────────────────────────────┘
┌Apps──────────────────────────────────────────────────────────────────────────┐
│                     No apps loaded. Press 'r' to refresh.                    │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│ Tab:Next | Shift+Tab:Prev | r:Refresh e:Enable d:Disable ...| ?:Help | q:Quit│
└──────────────────────────────────────────────────────────────────────────────┘
