crates/tui/tests/snapshots/snapshot_footer_tests__snapshot_footer_hints_indexes_screen.snap
---
source: crates/tui/tests/snapshot_footer_tests.rs
expression: harness.render()
---
┌──────────────────────────────────────────────────────────────────────────────┐
│Splunk TUI - Indexes | [?] Unknown                                            │
│ |                                                                            │
└──────────────────────────────────────────────────────────────────────────────┘
┌Indexes───────────────────────────────────────────────────────────────────────┐
│test_index - 1000000 events, 50000 MB                                         │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                 ┌──────────────────────────┐ │
│                                                 │ Onboarding [0/5] 0%      │ │
│                                                 │ ○ Create Profile         │ │
│                                                 │ ○ Test Connection        │ │
│                                                 │ ○ Run Search             │ │
│                                                 └──────────────────────────┘ │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│ Tab:Next | Shift+Tab:Prev | r:Refresh Enter:Details ...| ?:Help | q:Quit     │
└──────────────────────────────────────────────────────────────────────────────┘
