crates/tui/tests/snapshots/snapshot_footer_tests__snapshot_footer_hints_jobs_screen.snap
---
source: crates/tui/tests/snapshot_footer_tests.rs
expression: harness.render()
---
┌──────────────────────────────────────────────────────────────────────────────┐
│Splunk TUI - Jobs | [?] Unknown                                               │
│ |                                                                            │
└──────────────────────────────────────────────────────────────────────────────┘
┌Search Jobs───────────────────────────────────────────────────────────────────┐
│Sel  SID ↑                    Status          Duration   Results    Events    │
│[ ]  scheduler_admin_search_1 Done            5.23s      100        500       │
│[ ]  admin_search_9876543210  Running (65%)   12.45s     450        2000      │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│ Tab:Next | Shift+Tab:Prev | r:Refresh /:Filter s:Sort a:Auto| ?:Help | q:Quit│
└──────────────────────────────────────────────────────────────────────────────┘
