crates/tui/tests/snapshots/snapshot_footer_tests__snapshot_footer_hints_search_results_focused.snap
---
source: crates/tui/tests/snapshot_footer_tests.rs
expression: harness.render()
---
┌──────────────────────────────────────────────────────────────────────────────┐
│Splunk TUI - Search [NAV] | [?] Unknown                                       │
│ |                                                                            │
└──────────────────────────────────────────────────────────────────────────────┘
┌Search Query──────────────────────────────────────────────────────────────────┐
│index=main                                                                    │
└──────────────────────────────────────────────────────────────────────────────┘
┌Status────────────────────────────────────────────────────────────────────────┐
│Press Enter to execute search                                                 │
└──────────────────────────────────────────────────────────────────────────────┘
┌Results (2 loaded)────────────────────────────────────────────────────────────┐
│{                                                                             │
│  "_raw": "test event 1"                                                      │
│}                                                                             │
│{                                                                             │
│  "_raw": "test event 2"                                                      │
│}                                                                             │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│[NAV]  Tab:Next | Shift+Tab:Prev | Ctrl+Shift+Tab:Query  | Esc:Query | ?:Help │
└──────────────────────────────────────────────────────────────────────────────┘
