crates/tui/tests/snapshots/snapshot_footer_tests__snapshot_footer_hints_settings_screen.snap
---
source: crates/tui/tests/snapshot_footer_tests.rs
expression: harness.render()
---
┌──────────────────────────────────────────────────────────────────────────────┐
│Splunk TUI - Settings | [?] Unknown                                           │
│ |                                                                            │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
┌──────────────────────────────────────────────────────────────────────────────┐
│Theme:          Default                                                       │
│Auto-refresh:   [Off]  Sort: sid/asc                                          │
│Profile:        N/A  History: 0                                               │
│                                                                              │
│Search defaults: -24h → now (max 1000)                                        │
│Internal logs:   count 100 / earliest -15m                                    │
│                                                                              │
│Shortcuts                                                                     │
│t:Diagnostics  T:Theme  a:Auto-refresh                                        │
│s:Sort column  d:Direction  c:Clear history                                   │
│p:Switch profile  n:Create  e:Edit  x:Delete                                  │
│u:Undo history  ?:Replay tutorial                                             │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│ Tab:Next | Shift+Tab:Prev | t:Diag a:Auto s:Sort d:Direction| ?:Help | q:Quit│
└──────────────────────────────────────────────────────────────────────────────┘
