crates/tui/tests/snapshots/snapshot_footer_tests__snapshot_footer_job_inspect_esc_hint.snap
---
source: crates/tui/tests/snapshot_footer_tests.rs
expression: harness.render()
---
┌──────────────────────────────────────────────────────────────────────────────┐
│Splunk TUI - Job Details | [?] Unknown                                        │
│ |                                                                            │
└──────────────────────────────────────────────────────────────────────────────┘
┌Job Details───────────────────────────────────────────────────────────────────┐
│                    Job: scheduler_admin_search_1234567890                    │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│Status: Done                                                                  │
│Duration: 5.23 seconds                                                        │
│Event Count: 500                                                              │
│Scan Count: 1500                                                              │
│Result Count: 100                                                             │
│Disk Usage: 2048 MB                                                           │
│Priority: 5                                                                   │
│Label: Scheduled search                                                       │
│Cursor Time: 2024-01-15T10:30:00.000Z                                         │
│Finalized: No                                                                 │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│ Tab:Next | Shift+Tab:Prev  | Esc:Back | Esc:Back ...| ?:Help | q:Quit        │
└──────────────────────────────────────────────────────────────────────────────┘
